Attempting to make this a resume

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Trying to follow instructions</title>
+  <title>Prime Academy Resume</title>
   <link rel="stylesheet" href="style.css"/>
   </head>
   
   <body>
-  <p>Continuing to follow instructions.</p>
+    <h2>Tyler Samuel-Siegel</h2>
+  <p>519 Asbury St. N, St. Paul, MN 55104
+    682-300-5737 * tylersamuelsiegel@gmail.com</p>
   </body>
 </html>
