--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <body>
     <h2>Tyler Samuel-Siegel</h2>
-  <p>519 Asbury St. N, St. Paul, MN 55104
-    682-300-5737 * tylersamuelsiegel@gmail.com</p>
+    <p>519 Asbury St. N, St. Paul, MN 55104</p>
+    <p>682-300-5737 * tylersamuelsiegel@gmail.com</p>
   </body>
 </html>
