--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   </head>
   
   <body>
+    <div class="heading">
     <h2>Tyler Samuel-Siegel</h2>
     <p>519 Asbury St. N, St. Paul, MN 55104</p>
     <p>682-300-5737 * tylersamuelsiegel@gmail.com</p>
+    </div>
+    
     <h5>Summary</h5>
     <p>The old summary feels like it's not targeted towards this program so I'll have to write a new one.</p>
     <h5>Skills</h5>
