--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <p>682-300-5737 * tylersamuelsiegel@gmail.com</p>
     </div>
     
-    <h5>Summary</h5>
+    <ul>
+    <li>Summary</li>
     <p>The old summary feels like it's not targeted towards this program so I'll have to write a new one.</p>
-    <h5>Skills</h5>
+      <li>Skills</li>
+      <li>Experience</li>
+    </ul>
   </body>
 </html>
