--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body>
-    <div class="heading">
+    <div class="heading" style"text-align:center;">
     <h2>Tyler Samuel-Siegel</h2>
     <p>519 Asbury St. N, St. Paul, MN 55104</p>
     <p>682-300-5737 * tylersamuelsiegel@gmail.com</p>
